# kennel

./: .gitignore  CLAUDE.md  Cargo.nix  LICENSE  biome.json  devenv.nix  devenv.yaml  flake.nix  justfile  kennel.toml
.forgejo/workflows/: ci.yml
crates/entity/: Cargo.toml
crates/entity/src/: build_results.rs  builds.rs  deployments.rs  dns_records.rs  lib.rs  port_allocations.rs  prelude.rs  preview_databases.rs  projects.rs  sea_orm_active_enums.rs  services.rs
crates/kennel/: Cargo.toml
crates/kennel-api/: Cargo.toml
crates/kennel-api/src/: builds.rs  lib.rs
crates/kennel-builder/: Cargo.toml
crates/kennel-builder/src/: cachix.rs  error.rs  git.rs  lib.rs  nix.rs  worker.rs
crates/kennel-config/: Cargo.toml
crates/kennel-config/src/: config.rs  constants.rs  lib.rs
crates/kennel-deployer/: Cargo.toml
crates/kennel-deployer/src/: error.rs  health.rs  lib.rs  log_cleanup.rs  ports.rs  secrets.rs  service.rs  static_site.rs  systemd.rs  teardown.rs  user.rs  utils.rs
crates/kennel-dns/: Cargo.toml
crates/kennel-dns/src/: cloudflare.rs  error.rs  lib.rs  manager.rs  provider.rs
crates/kennel-router/: Cargo.toml
crates/kennel-router/src/: acme.rs  error.rs  handler.rs  health.rs  lib.rs  proxy.rs  static_serve.rs  table.rs  tls.rs
crates/kennel-secrets/: Cargo.toml
crates/kennel-store/: Cargo.toml
crates/kennel-store/src/: build_results.rs  builds.rs  cleanup.rs  deployments.rs  dns_records.rs  error.rs  lib.rs  port_allocations.rs  preview_databases.rs  projects.rs  reconciliation.rs  services.rs
crates/kennel-store/tests/: cleanup_tests.rs  port_allocation_tests.rs  preview_database_tests.rs
crates/kennel-webhook/: Cargo.toml
crates/kennel-webhook/src/: error.rs  events.rs  handler.rs  lib.rs  parse.rs  verify.rs
crates/kennel/src/: channels.rs  config.rs  dns.rs  main.rs  reconcile.rs
crates/migration/: README.md
crates/migration/src/: lib.rs  m20260224_193925_create_enums.rs  m20260224_193940_create_builds.rs  m20260224_193940_create_deployments.rs  m20260224_193940_create_port_allocations.rs  m20260224_193940_create_preview_databases.rs  m20260224_193940_create_projects.rs  m20260224_193940_create_services.rs  m20260224_194026_create_triggers.rs  m20260224_195047_create_build_results.rs  m20260225_055843_add_error_message_to_build_results.rs  m20260226_063306_create_dns_records.rs  m20260226_215312_add_builds_unique_constraint.rs
nixos/: default.nix
rfcs/: 0001-dev-environment-ci.md  0002-frontend.md  0003-database-schema.md  0004-core-pipeline.md  0005-nixos-module.md  0006-dns-management.md  README.md
sites/docs/: README.md  astro.config.mjs  bun.nix  openapi.json  package.json
sites/docs/src/content/docs/: index.mdx
sites/docs/src/content/docs/architecture/: overview.md
sites/docs/src/content/docs/guides/: deployment.md  nixos-deployment.md  troubleshooting.md  usage.md  webhooks.md
sites/docs/src/content/docs/reference/: kennel-toml.md
sites/web/: bun.nix  index.html  package.json
sites/web/src/lib/api/: schema.d.ts
