[package]
name = "kennel-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
