[package]
name = "kennel-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
entity = { version = "0.1.0", path = "../entity" }
kennel-config = { version = "0.1.0", path = "../kennel-config" }
kennel-store = { version = "0.1.0", path = "../kennel-store" }
sea-orm = "1.1.19"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.26.0"
