[package]
name = "kennel-deployer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
entity = { version = "0.1.0", path = "../entity" }
kennel-builder = { version = "0.1.0", path = "../kennel-builder" }
kennel-config = { version = "0.1.0", path = "../kennel-config" }
kennel-router = { version = "0.1.0", path = "../kennel-router" }
kennel-store = { version = "0.1.0", path = "../kennel-store" }
reqwest = "0.13.2"
sea-orm = "1.1.19"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
