[package]
name = "kennel-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
cloudflare = "0.14.0"
kennel-store = { version = "0.1.0", path = "../kennel-store" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
