[package]
name = "kennel-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum-server = "0.8.0"
entity = { version = "0.1.0", path = "../entity" }
kennel-config = { version = "0.1.0", path = "../kennel-config" }
kennel-store = { version = "0.1.0", path = "../kennel-store" }
mime_guess = "2.0.5"
reqwest = "0.13.2"
rustls = "0.23.37"
rustls-acme = { version = "0.15.1", features = ["axum", "ring", "tokio", "tower"], default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = "0.6.8"
tracing = "0.1.44"
webpki-roots = "1.0.6"
