[package]
name = "kennel-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.44"
entity = { version = "0.1.0", path = "../entity" }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
