[package]
name = "kennel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
kennel-api = { version = "0.1.0", path = "../kennel-api" }
kennel-config = { version = "0.1.0", path = "../kennel-config" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
